Pack rendering on screen

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
+    <script src="mainApp.js" type="module"></script>
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
     <div id="card_holder">
-        <script src="packCreate.js"></script>
     </div>
 </body>
