--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,6 @@
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
-    <div id="card_holder">
-    </div>
+    <div id="pack_holder"></div>
+    <div id="deck_holder"></div>
 </body>
