--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
+    <h1 id="pack_title">Pack</h1>
     <div id="pack_holder"></div>
+
+    <h1 id="deck_title">Deck</h1>
     <div id="deck_holder"></div>
 </body>
