--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
+
+    <div id="blackout" style="display:none;">Awaiting Other Players...</div>
     <h1 id="pack_title">Pack</h1>
     <div id="pack_holder"></div>
     <button id="confirm">Confirm</button>
