Added card zone logic

--- a/MTGGameSim/index.html
+++ b/MTGGameSim/index.html
@@ -7,7 +7,26 @@
 </head>
 
 <body>
-    <div id="container"></div>
+    <div id="card-containers">  
+        <div class="card-zone" id="deck">
+            <div class="sub-card-zone"></div>
+            <div class="sub-card-zone"></div>
+            <div class="sub-card-zone"></div>
+            <div class="sub-card-zone"></div>
+            <div class="sub-card-zone"></div>
+        </div>
+        <div class="card-zone" id="sideboard">
+            <div class="sub-card-zone"></div>
+            <div class="sub-card-zone"></div>
+            <div class="sub-card-zone"></div>
+            <div class="sub-card-zone"></div>
+            <div class="sub-card-zone"></div>
+        </div>
+        <div class="card-zone" id="specialty-cards">
+            <div class="sub-card-zone"></div>
+        </div> 
+        <div id="container"></div> 
+    </div>
     <div id="menu">
         <div>
             <button id="tap-button">Tap</button>
