Added scaling to cards

--- a/MTGGameSim/index.html
+++ b/MTGGameSim/index.html
@@ -14,15 +14,17 @@
             <div class="sub-card-zone"></div>
             <div class="sub-card-zone"></div>
             <div class="sub-card-zone"></div>
+            <div class="sub-card-zone"></div>
+        </div>
+        <div class="card-zone" id="specialty-board">
+            <div class="sub-card-zone"></div>
+            <div class="sub-card-zone"></div>
+            <div class="sub-card-zone"></div>
+            <div class="sub-card-zone"></div>
+            <div class="sub-card-zone"></div>
+            <div class="sub-card-zone"></div>
         </div>
         <div class="card-zone" id="sideboard">
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-        </div>
-        <div class="card-zone" id="specialty-cards">
             <div class="sub-card-zone"></div>
         </div> 
         <div id="container"></div> 
@@ -31,8 +33,11 @@
         <div>
             <button id="tap-button">Tap</button>
             <button id="delete-button">Delete</button>
+            <button id="fill-button">Fill Zones</button>
+            <button id="side-board-button">Move All to Sideboard</button>
         </div>
     </div>
+
     <script src="stageLogic.js"></script>
 </body>
 
