Added selection box for group dragging

--- a/MTGGameSim/index.html
+++ b/MTGGameSim/index.html
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <script src="stageLogic.js"></script>
+    <script src="stageLogic.js" type="module"></script>
 </body>
 
 </html>
