Added game.js logic

--- a/MTGGameSim/board.html
+++ b/MTGGameSim/board.html
@@ -42,31 +42,11 @@
             <div class="sub-card-zone"></div>
             <div class="sub-card-zone"></div>
             <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <!-- <div class="sub-card-zone"></div> -->
-            <!-- <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div>
-            <div class="sub-card-zone"></div> -->
         </div>
         <div class="card-zone" id="stack">
             <div class="sub-card-zone"></div>
         </div>
+
         <div id="container"></div>
     </div>
     <div id="menu">
@@ -77,7 +57,7 @@
         </div>
     </div>
 
-    <script src="stageLogic.js" type="module"></script>
+    <script src="game.js" type="module"></script>
 </body>
 
 </html>
