Scrolling and auto-fill zones

--- a/MTGGameSim/board.html
+++ b/MTGGameSim/board.html
@@ -49,11 +49,18 @@
 
         <div id="container"></div>
     </div>
-    <div id="menu">
+    <div class="menu" id="menu">
         <div>
             <button id="tap-button">Tap</button>
             <button id="fill-button">Fill Zones</button>
             <button id="side-board-button">Move All to Sideboard</button>
+        </div>
+    </div>
+    <div class="menu" id="library-menu">
+        <div>
+            <button id="draw-button">Draw a Card</button>
+            <button id="put-button">Put a card</button>
+            <button id="look-button">Look at library</button>
         </div>
     </div>
 
